--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
         "overtrue/laravel-lang": "~3.0",
-        "overtrue/pinyin": "~3.0"
+        "overtrue/pinyin": "~3.0",
+        "fzaninotto/faker": "~1.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.1",
