--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,18 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "fzaninotto/faker": "~1.4",
         "guzzlehttp/guzzle": "~6.3",
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
+        "laravel/horizon": "~1.0",
         "laravel/tinker": "~1.0",
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/pinyin": "~3.0",
-        "fzaninotto/faker": "~1.4"
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.1",
