--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "dingo/api": "2.0.0-alpha2",
+        "doctrine/dbal": "^2.8",
         "fideloper/proxy": "~3.3",
         "fzaninotto/faker": "~1.4",
         "guzzlehttp/guzzle": "~6.3",
